Custom changes from @Nogrod

--- a/CodeDeobfuscator/CodeDeobfuscator.csproj
+++ b/CodeDeobfuscator/CodeDeobfuscator.csproj
@@ -31,12 +31,10 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Mono.Cecil">
-      <HintPath>..\Mono.Cecil.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Dependencies\Mono.Cecil.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Cecil.Rocks">
-      <HintPath>..\Mono.Cecil.Rocks.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\Dependencies\Mono.Cecil.Rocks.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
