--- a/Deobfuscate-Main/Deobfuscate-Main.csproj
+++ b/Deobfuscate-Main/Deobfuscate-Main.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -36,14 +36,12 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Mono.Cecil">
-      <HintPath>..\Mono.Cecil.dll</HintPath>
+      <HintPath>..\Dependencies\Mono.Cecil.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
-    <Reference Include="Mono.Cecil.Rocks">
-      <HintPath>..\Mono.Cecil.Rocks.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Patcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Deobfuscator.cs" />
     <Compile Include="Logger.cs" />
